Fix issue on mobile screens

--- a/css/product.css
+++ b/css/product.css
@@ -101,5 +101,6 @@ nav a:hover {
 	padding: 4px;
 	border-radius: 2px;
 	font-style: italic;
+	font-size: 12px;
 }
 /******END BRAND******/
